--- a/app/src/main/res/layout/activity_bluetooth_manage.xml
+++ b/app/src/main/res/layout/activity_bluetooth_manage.xml
@@ -30,4 +30,13 @@
         </LinearLayout>
     </ScrollView>
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="启动蓝牙服务"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintTop_toTopOf="@+id/button" />
+
 </android.support.constraint.ConstraintLayout>
