--- a/app/src/main/res/layout/activity_bluetooth_info.xml
+++ b/app/src/main/res/layout/activity_bluetooth_info.xml
@@ -13,8 +13,8 @@
         android:text="名称"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_marginTop="16dp"
-        tools:layout_marginLeft="16dp" />
+        tools:layout_marginLeft="16dp"
+        tools:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/name"
@@ -23,7 +23,7 @@
         android:layout_marginStart="8dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2"/>
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -31,8 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="mac"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintLeft_toLeftOf="@id/textView2" />
+        app:layout_constraintLeft_toLeftOf="@id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/mac"
@@ -48,10 +48,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="uuid"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintLeft_toLeftOf="@id/textView4" />
+        android:text="uuid"
+        app:layout_constraintLeft_toLeftOf="@id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/uuid"
@@ -60,8 +60,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:scrollbars="vertical"
-        app:layout_constraintHeight_percent="0.1"
         android:text="TextView"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/mac" />
 
@@ -71,8 +71,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="客户端连接"
-        app:layout_constraintTop_toBottomOf="@+id/uuid"
-        app:layout_constraintLeft_toLeftOf="@id/textView4" />
+        app:layout_constraintLeft_toLeftOf="@id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/uuid" />
 
     <TextView
         android:id="@+id/textView8"
@@ -82,16 +82,15 @@
         android:background="@android:drawable/alert_light_frame"
         android:scrollbars="vertical"
         android:text="TextView"
-        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Name"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/button7"
@@ -102,4 +101,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
+
+    <Button
+        android:id="@+id/cllog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="清除log"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/button7"
+        app:layout_constraintTop_toTopOf="@id/button7" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:background="@android:drawable/alert_light_frame"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择指令"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button7"
+        app:layout_constraintTop_toTopOf="@+id/button7" />
 </android.support.constraint.ConstraintLayout>
