--- a/app/src/main/res/layout/fragment_drawer_left.xml
+++ b/app/src/main/res/layout/fragment_drawer_left.xml
@@ -48,4 +48,10 @@
         android:layout_height="wrap_content"
         android:text="蓝牙"
         app:layout_constraintTop_toBottomOf="@id/recyclerView" />
+    <Button
+        android:id="@+id/nfc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NFC"
+        app:layout_constraintTop_toBottomOf="@id/bluetooth" />
 </android.support.constraint.ConstraintLayout>
