--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:padding="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
