--- a/app/src/main/res/layout/activity_media_management.xml
+++ b/app/src/main/res/layout/activity_media_management.xml
@@ -13,11 +13,28 @@
         android:text="@string/Get_image"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/preview"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toBottomOf="@id/getImage"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/imageRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/preview"
+        app:layout_constraintBottom_toBottomOf="@id/preview"
+        app:layout_constraintStart_toEndOf="@id/preview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
     <Button
         android:id="@+id/getVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Get_video"
-        app:layout_constraintTop_toBottomOf="@id/getImage"/>
+        app:layout_constraintTop_toBottomOf="@id/preview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
