--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
         <!--        RadioButton checkbox等控件的文字颜色-->
         <!--        <item name="android:textColorPrimaryDisableOnly"></item>-->
         <!--        应用的主要文字颜色，actionBar的标题文字默认使用该颜色-->
-        <item name="android:textColorPrimary">@android:color/white</item>
+<!--        <item name="android:textColorPrimary">@android:color/white</item>-->
         <!--        switch thumbs 默认状态的颜色. (switch off)-->
         <!--        <item name="colorSwitchThumbNormal"></item>-->
 
@@ -71,5 +71,8 @@
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
         <!--        设置默认Dialog动画-->
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <!--        设置CheckBox选中的颜色-->
+        <item name="android:colorControlActivated">@color/colorAccent</item>
     </style>
+
 </resources>
