文件管理器更新

--- a/app/src/main/res/layout/activity_file_home.xml
+++ b/app/src/main/res/layout/activity_file_home.xml
@@ -8,15 +8,11 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        android:theme="@style/ToolBarTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
-        <TextView
-            android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="添加新的授权目录"/>
-    </androidx.appcompat.widget.Toolbar>
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rootFileRecyclerView"
