--- a/app/src/main/res/layout/activity_file_management.xml
+++ b/app/src/main/res/layout/activity_file_management.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.file.FileOperateActivity">
 
-    <TextView
-        android:id="@+id/rootPath"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rootRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -20,6 +22,6 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rootPath" />
+        app:layout_constraintTop_toBottomOf="@id/rootRecyclerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
