--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -6,11 +6,22 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
+    <CheckBox
+        android:id="@+id/select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/simpleDraweeView"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/select"
         app:layout_constraintTop_toTopOf="parent"
         fresco:viewAspectRatio="1" />
 
@@ -39,8 +50,8 @@
         android:id="@+id/dateTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="end"
         android:layout_marginStart="8dp"
+        android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/simpleDraweeView"
         app:layout_constraintTop_toBottomOf="@id/remark" />
