--- a/app/src/main/res/layout/item_file_hoem_root.xml
+++ b/app/src/main/res/layout/item_file_hoem_root.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="内部储存"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,7 +17,6 @@
         android:id="@+id/rom"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="容量"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name" />
@@ -26,7 +25,6 @@
         android:id="@+id/path"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="路径"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rom" />
@@ -35,17 +33,14 @@
         android:id="@+id/canRead"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="读"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/path" />
-
 
     <TextView
         android:id="@+id/canWrite"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="写"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/canRead" />
