--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,10 @@
     <!--    窗口背景色-->
     <color name="windowBackground">#F4F4F4</color>
 
-    <!--完全透明色-->
+    <!--完全透明色可以直接使用@android:color/transparent-->
+    <!--半透明-->
+    <color name="translucent">#40000000</color>
+    <!--灰色-->
+    <color name="gray">#808080</color>
+
 </resources>
