图片压缩工具类更新

--- a/app/src/main/res/layout/activity_file_home.xml
+++ b/app/src/main/res/layout/activity_file_home.xml
@@ -8,16 +8,48 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:theme="@style/ToolBarTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:theme="@style/ToolBarTheme"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
+
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alignmentMode="alignBounds"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_height="48dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:src="@drawable/ic_baseline_image_24" />
+
+        <ImageView
+            android:id="@+id/video"
+            android:layout_height="48dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:src="@drawable/ic_baseline_video_library_24" />
+
+        <ImageView
+            android:id="@+id/music"
+            android:layout_height="48dp"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_columnWeight="1"
+            android:src="@drawable/ic_baseline_queue_music_24" />
+    </GridLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rootFileRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/gridLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
