--- a/app/src/main/res/layout/activity_encryption.xml
+++ b/app/src/main/res/layout/activity_encryption.xml
@@ -11,16 +11,30 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/keyLayout"
+            android:id="@+id/publicKeyLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/key"
+                android:id="@+id/publicKey"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/Key"
+                android:hint="@string/publicKey"
+                android:inputType="textMultiLine" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/privateKeyLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/publicKeyLayout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/privateKey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/privateKey"
                 android:inputType="textMultiLine" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -30,7 +44,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toStartOf="@id/startBarrier"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/keyLayout">
+            app:layout_constraintTop_toBottomOf="@id/privateKeyLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/plaintext"
@@ -46,7 +60,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/endBarrier"
-            app:layout_constraintTop_toBottomOf="@id/keyLayout">
+            app:layout_constraintTop_toBottomOf="@id/privateKeyLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ciphertext"
@@ -62,7 +76,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/keyLayout" />
+            app:layout_constraintTop_toBottomOf="@id/privateKeyLayout" />
 
         <Button
             android:id="@+id/encryption"
@@ -88,14 +102,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="start"
-            app:constraint_referenced_ids="encryption,timing,decrypt,encryptionAlgorithm" />
+            app:constraint_referenced_ids="encryption,timing,decrypt" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/endBarrier"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="end"
-            app:constraint_referenced_ids="encryption,timing,decrypt,encryptionAlgorithm" />
+            app:constraint_referenced_ids="encryption,timing,decrypt" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
