--- a/app/src/main/res/menu/menu_add_lookover.xml
+++ b/app/src/main/res/menu/menu_add_lookover.xml
@@ -3,8 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_add"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title="@string/add"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_look_over"
         android:icon="@drawable/ic_view_module_white_24dp"
         android:title="@string/look_over"
         app:showAsAction="always" />
+
 </menu>
