--- a/app/src/main/res/layout/item_recyclerview_head.xml
+++ b/app/src/main/res/layout/item_recyclerview_head.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
