--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -5,37 +5,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.NavigationActivity">
-    <!--
-    android:name	值必须是androidx.navigation.fragment.NavHostFragment，声明这是一个NavHostFragment
-    app:navGraph	存放的是第二步建好导航的资源文件，也就是确定了Navigation Graph
-    app:defaultNavHost="true"	与系统的返回按钮相关联
-    -->
-    <fragment
-        android:id="@+id/fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--
+      android:name	值必须是androidx.navigation.fragment.NavHostFragment，包含 NavHost 实现的类名称
+      app:navGraph	将 NavHostFragment 与导航图相关联。
+                      导航图会在此 NavHostFragment 中指定用户可以导航到的所有目的地。
+      app:defaultNavHost="true"	确保您的 NavHostFragment 会拦截系统返回按钮。
+                      请注意，只能有一个默认 NavHost。
+      如果同一布局（例如，双窗格布局）中有多个主机，请务必仅指定一个默认 NavHost。
+      -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/button1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/navigation_navigation" />
+        app:layout_constraintBottom_toTopOf="@id/buttonTopBarrier"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:navGraph="@navigation/nav_graph" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/buttonTopBarrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="button1,button2"
+        app:barrierDirection="top"/>
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/hello_blank_fragment"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/button2"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/hello_blank_fragment_2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
