--- a/app/src/main/res/layout/fragment_blank2.xml
+++ b/app/src/main/res/layout/fragment_blank2.xml
@@ -21,4 +21,12 @@
         android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text" />
+
+    <Button
+        android:id="@+id/bottom2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bottom" />
 </androidx.constraintlayout.widget.ConstraintLayout>
