--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.sq26.experience.ui.fragment.HomeViewModel" />
+            type="com.sq26.experience.viewmodel.HomeViewModel" />
 
         <variable
             name="event"
@@ -32,11 +32,12 @@
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 app:title="@{viewModel.title}" />
 
-            <TextView
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/menuRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="@{()->event.onClick()}"
-                android:text="@{viewModel.content}"
+                android:layout_height="0dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/toolbar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
