--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,17 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_navigation"
     android:label="navigation"
-    app:startDestination="@id/startFragment">
+    app:startDestination="@id/homeFragment">
     <!--startDestination:设置起始目的地-->
     <fragment
         android:id="@+id/startFragment"
         android:name="com.sq26.experience.ui.fragment.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" >
+    </fragment>
+
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.sq26.experience.ui.fragment.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_startFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
-            />
+            android:id="@+id/action_homeFragment_to_startFragment"
+            app:destination="@id/startFragment" />
     </fragment>
 
     <fragment
@@ -101,10 +107,5 @@
                 app:popUpToInclusive="true" />
         </fragment>
     </navigation>
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.sq26.experience.ui.fragment.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
 
 </navigation>
