--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,61 +2,85 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_navigation"
+    android:id="@+id/nav_graph"
     android:label="navigation"
     app:startDestination="@id/homeFragment">
     <!--startDestination:设置起始目的地-->
     <fragment
         android:id="@+id/startFragment"
         android:name="com.sq26.experience.ui.fragment.StartFragment"
-        android:label="fragment_start"
-        tools:layout="@layout/fragment_start" >
-    </fragment>
+        android:label="起始页"
+        tools:layout="@layout/fragment_start"/>
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.sq26.experience.ui.fragment.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="主页"
+        tools:layout="@layout/fragment_home">
+<!--        跳转到起始页-->
         <action
             android:id="@+id/action_homeFragment_to_startFragment"
             app:destination="@id/startFragment" />
+<!--        跳转到对称和非对称加密-->
         <action
             android:id="@+id/action_homeFragment_to_encryptionActivity"
             app:destination="@id/encryptionActivity" />
+<!--        跳转到导航演示-->
         <action
             android:id="@+id/action_homeFragment_to_navigationActivity"
             app:destination="@id/navigationActivity" />
-    </fragment>
+        <action
+            android:id="@+id/action_homeFragment_to_AIDLActivity"
+            app:destination="@id/AIDLActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_testActivity"
+            app:destination="@id/testActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_kotlinActivity"
+            app:destination="@id/kotlinActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_pagingActivity"
+            app:destination="@id/pagingActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_dataBindingActivity"
+            app:destination="@id/dataBindingActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_qrCodeDemoActivity"
+            app:destination="@id/qrCodeDemoActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_cameraActivity"
+            app:destination="@id/cameraActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_statusBarActivity"
+            app:destination="@id/statusBarActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_authorizedOperationActivity"
+            app:destination="@id/authorizedOperationActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_fileHomeActivity"
+            app:destination="@id/fileHomeActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_downloadManagementActivity"
+            app:destination="@id/downloadManagementActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_networkActivity"
+            app:destination="@id/networkActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_wiFiDirectActivity"
+            app:destination="@id/wiFiDirectActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_appManagementActivity"
+            app:destination="@id/appManagementActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_pullToRefreshActivity"
+            app:destination="@id/pullToRefreshActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_recyclerViewActivity"
+            app:destination="@id/recyclerViewActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_workManagerActivity"
+            app:destination="@id/workManagerActivity" />
 
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.sq26.experience.ui.fragment.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank">
-        <!--在导航图中，操作由 <action> 元素表示。
-        操作至少应包含自己的 ID 和用户应转到的目的地的 ID。
-        Type 字段包含“Action”。
-        ID 字段包含该操作的 ID。
-        Destination 字段包含目的地 Fragment 或 Activity 的 ID。
-        -->
-        <action
-            android:id="@+id/action_blankFragment_to_blank2Fragment"
-            app:destination="@id/navigation">
-            <!-- 跳转嵌套导航图,如果嵌套导航图的根视图需要参数,需要在跳转动作中添加argument才能正常传递参数
-            argument要与嵌套导航图的根视图需要参数的名称和类型完全相同  -->
-            <!-- 修改原本blank2Fragment要传的参数的默认值-->
-            <argument
-                android:name="index"
-                android:defaultValue="5"
-                app:argType="integer" />
-        </action>
-        <action
-            android:id="@+id/action_blankFragment_to_loginActivity"
-            app:destination="@id/loginActivity" />
-        <action
-            android:id="@+id/action_blankFragment_to_include_nav_graph"
-            app:destination="@id/include_nav_graph" />
     </fragment>
 
     <!--    外层是全局跳转动作-->
@@ -65,63 +89,101 @@
         app:destination="@id/blankFragment"
         app:popUpTo="@+id/blankFragment"
         app:popUpToInclusive="true" />
-    <action
-        android:id="@+id/action_global_blank2Fragment"
-        app:destination="@id/navigation">
-        <argument
-            android:name="index"
-            android:defaultValue="6"
-            app:argType="integer" />
-    </action>
-    <!--    目的地是activity会打开新页面-->
-    <activity
-        android:id="@+id/loginActivity"
-        android:name="com.sq26.experience.ui.activity.LoginActivity"
-        android:label="activity_login"
-        tools:layout="@layout/activity_login">
-        <argument
-            android:name="text"
-            android:defaultValue=""
-            app:argType="string" />
-    </activity>
-    <!--    通过include引入嵌套导航图-->
-    <include app:graph="@navigation/nav_include_graph" />
-    <!--    也可以直接创建嵌套导航图-->
-    <navigation
-        android:id="@+id/navigation"
-        app:startDestination="@id/blank2Fragment">
-        <fragment
-            android:id="@+id/blank2Fragment"
-            android:name="com.sq26.experience.ui.fragment.Blank2Fragment"
-            android:label="fragment_blank2"
-            tools:layout="@layout/fragment_blank2">
-            <argument
-                android:name="index"
-                android:defaultValue="0"
-                app:argType="integer" />
-            <!--        popUpTo:指在blankFragment的上面打开目标blankFragment,
-            并清除blankFragment之上的所有fragment,
-                        popUpToInclusive:true表示连同popUpTo指定的blankFragment一起清除
-                        false:false表示不清除
-                        像目的地是blankFragment同时要在blankFragment之上打开新页面时,就会产生两个blankFragment
-                        需要设置popUpToInclusive:true把指定的blankFragment也一起清除代替旧的blankFragment的位置
-                                -->
-            <action
-                android:id="@+id/action_blank2Fragment_to_blankFragment"
-                app:destination="@id/blankFragment"
-                app:popUpTo="@+id/blankFragment"
-                app:popUpToInclusive="true" />
-        </fragment>
-    </navigation>
+
     <activity
         android:id="@+id/encryptionActivity"
         android:name="com.sq26.experience.ui.activity.EncryptionActivity"
         android:label="activity_encryption"
         tools:layout="@layout/activity_encryption" />
+
     <activity
         android:id="@+id/navigationActivity"
         android:name="com.sq26.experience.ui.activity.NavigationActivity"
         android:label="activity_navigation"
         tools:layout="@layout/activity_navigation" />
+    <activity
+        android:id="@+id/AIDLActivity"
+        android:name="com.sq26.experience.ui.activity.AIDLActivity"
+        android:label="activity_aidl"
+        tools:layout="@layout/activity_aidl" />
+    <activity
+        android:id="@+id/testActivity"
+        android:name="com.sq26.experience.ui.activity.TestActivity"
+        android:label="activity_test"
+        tools:layout="@layout/activity_test" />
+    <activity
+        android:id="@+id/kotlinActivity"
+        android:name="com.sq26.experience.ui.activity.KotlinActivity"
+        android:label="activity_kotlin"
+        tools:layout="@layout/activity_kotlin" />
+    <activity
+        android:id="@+id/pagingActivity"
+        android:name="com.sq26.experience.ui.activity.PagingActivity"
+        android:label="activity_paging"
+        tools:layout="@layout/activity_paging" />
+    <activity
+        android:id="@+id/dataBindingActivity"
+        android:name="com.sq26.experience.ui.activity.DataBindingActivity"
+        android:label="DataBindingActivity" />
+    <activity
+        android:id="@+id/qrCodeDemoActivity"
+        android:name="com.sq26.experience.ui.activity.QrCodeDemoActivity"
+        android:label="activity_qr_code_demo"
+        tools:layout="@layout/activity_qr_code_demo" />
+    <activity
+        android:id="@+id/cameraActivity"
+        android:name="com.sq26.experience.ui.activity.CameraActivity"
+        android:label="activity_camera"
+        tools:layout="@layout/activity_camera" />
+    <activity
+        android:id="@+id/statusBarActivity"
+        android:name="com.sq26.experience.ui.activity.StatusBarActivity"
+        android:label="activity_status_bar"
+        tools:layout="@layout/activity_status_bar" />
+    <activity
+        android:id="@+id/authorizedOperationActivity"
+        android:name="com.sq26.experience.ui.activity.AuthorizedOperationActivity"
+        android:label="activity_authorized_operation"
+        tools:layout="@layout/activity_authorized_operation" />
+    <activity
+        android:id="@+id/fileHomeActivity"
+        android:name="com.sq26.experience.ui.activity.file.FileHomeActivity"
+        android:label="activity_file_home"
+        tools:layout="@layout/activity_file_home" />
+    <activity
+        android:id="@+id/downloadManagementActivity"
+        android:name="com.sq26.experience.ui.activity.DownloadManagementActivity"
+        android:label="activity_download_management"
+        tools:layout="@layout/activity_download_management" />
+    <activity
+        android:id="@+id/networkActivity"
+        android:name="com.sq26.experience.ui.activity.NetworkActivity"
+        android:label="activity_network"
+        tools:layout="@layout/activity_network" />
+    <activity
+        android:id="@+id/wiFiDirectActivity"
+        android:name="com.sq26.experience.ui.activity.WiFiDirectActivity"
+        android:label="activity_wi_fi_direct"
+        tools:layout="@layout/activity_wi_fi_direct" />
+    <activity
+        android:id="@+id/appManagementActivity"
+        android:name="com.sq26.experience.ui.activity.AppManagementActivity"
+        android:label="activity_app_management"
+        tools:layout="@layout/activity_app_management" />
+    <activity
+        android:id="@+id/pullToRefreshActivity"
+        android:name="com.sq26.experience.ui.activity.PullToRefreshActivity"
+        android:label="activity_pull_to_refresh"
+        tools:layout="@layout/activity_pull_to_refresh" />
+    <activity
+        android:id="@+id/recyclerViewActivity"
+        android:name="com.sq26.experience.ui.activity.RecyclerViewActivity"
+        android:label="activity_recycler_view"
+        tools:layout="@layout/activity_recycler_view" />
+    <activity
+        android:id="@+id/workManagerActivity"
+        android:name="com.sq26.experience.ui.activity.WorkManagerActivity"
+        android:label="activity_recycler_view"
+        tools:layout="@layout/activity_recycler_view" />
 
 </navigation>
